@@ -11,7 +11,6 @@
 - Now playing
   - Show more info for desktop view. e.g. expand 3 tabs into 3 columns
   - Draw album cover as backdrop?
-  - Show all artists
   - Show technical info; file type, bit rate, sample rate
 
 - Misc
