@@ -11,6 +11,7 @@
  8. Disable swipe to change views whilst photo slideshow is open.
  9. When listing a genre's items, ask whether to list Artists or Albums.
 10. Always send volume up commands, even if at 100% already.
+11. List all artists of a track in toolbar, queue, and now playing.
 
 0.1.0
 -----
